# myDLlib

./: .gitignore  CMakeLists.txt  README.md  bench_mark.sh  run.sh
include/: dl.cuh  dl.h  dl.hh  dl.hpp  enumaration.h  tensor.h  threadPool_test.cc  thread_pool
include/basic/: enumaration.h  enumaration.hpp  function.cuh  function.h  function.hh  functional.h  tensor_macro.cuh  tensor_macro.hh  tensor_macro.hpp  timer.cuh  timer.h  type_tool.h
include/data/: align_alloc.cuh  align_alloc.hh  rand_init.cuh  rand_init.h  rand_init.hh  rand_init.hpp  tensor.cuh  tensor.h  tensor.hh  tensor.hpp  thread_calcu.h
include/model/: nn.cuh  nn.h  nn.hh  nn.hpp
include/model/activate/: relu.hh
include/model/activation/: __activation__.hh  relu.cuh  relu.hh  sigmoid.cuh  sigmoid.hh  softmax.cuh  softmax.hh
include/model/compute/: __compute__.hh  averagePool.hh  avgPool.cuh  avgPool.hh  conv.cuh  conv.hh  linear.cuh  linear.hh  matrix.cuh  matrix.hh  maxPool.cuh  maxPool.hh  residualBlock.cuh  residualBlock.hh  sequential.cuh  sequential.hh
include/model/nn/: Conv.hh  Linear.hh  nn.hh
include/model/utils/: __utils__.hh  flatten.cuh  flatten.hh
include/ops/: nn.cuh
include/ops/activation/: __activation__.cuh  relu.cuh  sigmoid.cuh  softmax.cuh
include/ops/compute/: __compute__.cuh  avgPool.cuh  conv.cuh  linear.cuh  matrix.cuh  maxPool.cuh  residualBlock.cuh  sequential.cuh
include/ops/utils/: __utils__.cuh  flatten.cuh
include/ops_impl/cpu/: activation.hh  avx_lib.hh  basic.hh  conv.hh  linear.hh  matrix.hh  pooling.hh  tensor.hh
include/ops_impl/cuda/: activation.cuh  basic.cuh  conv.cuh  linear.cuh  matrix.cuh  pooling.cuh  tensor.cuh
include/parallel/: activation_boost.hh  activation_cpu.cuh  activation_cuda.cuh  activation_parallel.cuh  activation_parallel.hh  basic_cpu.cuh  basic_cuda.cuh  conv_boost.hh  conv_cpu.cuh  conv_cuda.cuh  conv_parallel.cuh  conv_parallel.hh  linear_cpu.cuh  matrix_cpu.cuh  matrix_parallel.cuh  matrix_parallel.hh  parallel.cuh  parallel.h  parallel.hh  parallel.hpp  pooling_boost.hh  pooling_cpu.cuh  pooling_cuda.cuh  pooling_parallel.cuh  pooling_parallel.hh  tensor_boost.hh  tensor_calcu.hh  tensor_cpu.cuh  tensor_cuda.cuh  tensor_parallel.cuh  tensor_parallel.hh  thread_calcu.h  thread_calcu.hpp  thread_pool.cuh  thread_pool.hpp
include/utils/: global_func.hh
src/myDLlib/: CMakeLists.txt  tensor.cpp
src/myDLlib/data/: rand_init.cpp  tensor.cpp
src/test/: test1.cc  test1.cpp  test2.cu
